Data Cleaning started - EDA csv generated

--- a/code/data_extraction/azureml-job-comments.ipynb
+++ b/code/data_extraction/azureml-job-comments.ipynb
@@ -32,10 +32,10 @@
           "text": "Found the config file in: /config.json\n"
         }
       ],
-      "execution_count": 5,
+      "execution_count": 14,
       "metadata": {
         "gather": {
-          "logged": 1699633493136
+          "logged": 1699638471091
         }
       }
     },
@@ -70,14 +70,14 @@
       "cell_type": "code",
       "source": [
         "spark_job = spark(\n",
-        "    name=\"reddit-filter-comments\",\n",
+        "    name=\"reddit-filter-comments-1\",\n",
         "    code=\"./\",\n",
         "    entry={\"file\": \"pyspark-script-job.py\"},\n",
         "    driver_cores=1,\n",
-        "    driver_memory=\"5g\",\n",
+        "    driver_memory=\"4g\",\n",
         "    executor_cores=4,\n",
         "    executor_memory=\"10g\",\n",
-        "    executor_instances=6,\n",
+        "    executor_instances=8,\n",
         "    resources={\n",
         "        \"instance_type\": \"Standard_E4S_V3\",\n",
         "        \"runtime_version\": \"3.2.0\",\n",
@@ -95,10 +95,10 @@
         ")"
       ],
       "outputs": [],
-      "execution_count": 6,
+      "execution_count": 15,
       "metadata": {
         "gather": {
-          "logged": 1699633503087
+          "logged": 1699638514033
         }
       }
     },
@@ -118,13 +118,13 @@
         {
           "output_type": "stream",
           "name": "stderr",
-          "text": "\r\u001b[32mUploading code (0.52 MBs):   0%|          | 0/519898 [00:00<?, ?it/s]\r\u001b[32mUploading code (0.52 MBs):   2%|▏         | 10417/519898 [00:00<00:06, 74304.97it/s]\r\u001b[32mUploading code (0.52 MBs): 100%|██████████| 519898/519898 [00:00<00:00, 2655922.04it/s]\n\u001b[39m\n\n"
+          "text": "\r\u001b[32mUploading code (0.34 MBs):   0%|          | 0/336258 [00:00<?, ?it/s]\r\u001b[32mUploading code (0.34 MBs):  25%|██▍       | 83330/336258 [00:00<00:00, 572377.35it/s]\r\u001b[32mUploading code (0.34 MBs): 100%|██████████| 336258/336258 [00:00<00:00, 1565166.36it/s]\n\u001b[39m\n\n"
         }
       ],
-      "execution_count": 7,
+      "execution_count": 16,
       "metadata": {
         "gather": {
-          "logged": 1699633509939
+          "logged": 1699638518973
         }
       }
     },
@@ -145,13 +145,13 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "https://ml.azure.com/runs/reddit-filter-comments?wsid=/subscriptions/eccec620-0403-4f08-9535-0f93c5a0e1dc/resourcegroups/project-rg/workspaces/group-34-aml&tid=fd571193-38cb-437b-bb55-60f28d67b643\n"
+          "text": "https://ml.azure.com/runs/reddit-filter-comments-1?wsid=/subscriptions/eccec620-0403-4f08-9535-0f93c5a0e1dc/resourcegroups/project-rg/workspaces/group-34-aml&tid=fd571193-38cb-437b-bb55-60f28d67b643\n"
         }
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "metadata": {
         "gather": {
-          "logged": 1699633511178
+          "logged": 1699638519046
         }
       }
     }
