--- a/code/data_extraction/sagemaker_data_extraction.ipynb
+++ b/code/data_extraction/sagemaker_data_extraction.ipynb
@@ -1239,11 +1239,11 @@
    "source": [
     "# Copy the files to Sangeetha's, and Samiksha's s3 buckets\n",
     "## Comments\n",
-    "!aws s3 cp s3://{bucket}/project/comments/ s3://cn524-labdata/finalProjectData/cleanedFlairs/ --recursive\n",
-    "!aws s3 cp s3://{bucket}/project/comments/ s3://mjv38-labdata/finalProjectData/cleanedFlairs/ --recursive\n",
+    "!aws s3 cp s3://{bucket}/project/comments/ \n",
+    "!aws s3 cp s3://{bucket}/project/comments/ \n",
     "\n",
-    "!aws s3 cp s3://{bucket}/project/submissions/ s3://cn524-labdata/finalProjectData/cleanedFlairs/ --recursive\n",
-    "!aws s3 cp s3://{bucket}/project/submissions/ s3://mjv38-labdata/finalProjectData/cleanedFlairs/ --recursive\n"
+    "!aws s3 cp s3://{bucket}/project/submissions/\n",
+    "!aws s3 cp s3://{bucket}/project/submissions/ \n"
    ]
   }
  ],
