ReviewSentiment CSVs generated

--- a/code/nlp/project_nlp.ipynb
+++ b/code/nlp/project_nlp.ipynb
@@ -124,7 +124,7 @@
       "The jars for the packages stored in: /root/.ivy2/jars\n",
       "com.johnsnowlabs.nlp#spark-nlp_2.12 added as a dependency\n",
       "org.apache.hadoop#hadoop-aws added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-250adc94-09cf-4e31-9167-841fca351fbe;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-71ed2c52-d21b-40a0-8997-69ea82d57eff;1.0\n",
       "\tconfs: [default]\n",
       "\tfound com.johnsnowlabs.nlp#spark-nlp_2.12;5.1.3 in central\n",
       "\tfound com.typesafe#config;1.4.2 in central\n",
@@ -202,7 +202,7 @@
       "\tfound com.johnsnowlabs.nlp#tensorflow-cpu_2.12;0.4.4 in central\n",
       "\tfound com.microsoft.onnxruntime#onnxruntime;1.15.0 in central\n",
       "\tfound org.apache.hadoop#hadoop-aws;3.2.2 in central\n",
-      ":: resolution report :: resolve 3580ms :: artifacts dl 518ms\n",
+      ":: resolution report :: resolve 3422ms :: artifacts dl 445ms\n",
       "\t:: modules in use:\n",
       "\tcom.amazonaws#aws-java-sdk-bundle;1.11.828 from central in [default]\n",
       "\tcom.fasterxml.jackson.core#jackson-core;2.14.2 from central in [default]\n",
@@ -288,12 +288,13 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   77  |   0   |   0   |   4   ||   73  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-250adc94-09cf-4e31-9167-841fca351fbe\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-71ed2c52-d21b-40a0-8997-69ea82d57eff\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 73 already retrieved (0kB/64ms)\n",
-      "23/11/21 02:48:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 73 already retrieved (0kB/137ms)\n",
+      "23/11/23 23:43:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/11/23 23:43:37 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     },
     {
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2965f34c-dd03-4c7a-8409-b817faa5e666",
    "metadata": {
     "tags": []
@@ -430,23 +431,9 @@
      "text": [
       "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
       "sagemaker.config INFO - Not applying SDK defaults from location: /root/.config/sagemaker/config.yaml\n",
-      "reading comments from s3a://project-group34/project/comments/yyyy=*\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/11/21 02:48:48 WARN MetricsConfig: Cannot locate configuration: tried hadoop-metrics2-s3a-file-system.properties,hadoop-metrics2.properties\n",
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 210 ms, sys: 20.9 ms, total: 231 ms\n",
-      "Wall time: 7.55 s\n"
+      "reading comments from s3a://project-group34/project/comments/yyyy=2021\n",
+      "CPU times: user 25.2 ms, sys: 671 µs, total: 25.9 ms\n",
+      "Wall time: 829 ms\n"
      ]
     }
    ],
@@ -454,7 +441,7 @@
     "%%time\n",
     "bucket = \"project-group34\"\n",
     "session = sagemaker.Session()\n",
-    "output_prefix_data_comments = \"project/comments/yyyy=*\"\n",
+    "output_prefix_data_comments = \"project/comments/yyyy=2021\"\n",
     "s3_path = f\"s3a://{bucket}/{output_prefix_data_comments}\"\n",
     "print(f\"reading comments from {s3_path}\")\n",
     "comments = spark.read.parquet(s3_path, header=True)"
@@ -462,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c3de33fb-8b6c-4e53-a7fd-7cad7ad64964",
    "metadata": {
     "tags": []
@@ -526,7 +513,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 1:>                                                          (0 + 1) / 1]\r"
+      "[Stage 2:>                                                          (0 + 1) / 1]\r"
      ]
     },
     {
@@ -575,8 +562,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2a88822-d093-4f36-a039-ef010069a135",
+   "metadata": {},
+   "source": [
+    "### DATA PROCESSING"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "9d420acb-8838-4688-bbf6-adf92e693b9a",
    "metadata": {
     "tags": []
@@ -651,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "64b6c736-63ab-48a9-ad83-b8d01bd74b5a",
    "metadata": {
     "tags": []
@@ -663,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "947b6caf-ade3-4bd9-83af-504ad2266559",
    "metadata": {
     "tags": []
@@ -683,6 +678,66 @@
     }
    ],
    "source": [
+    "# # Define the pipeline stages\n",
+    "# document_assembler = DocumentAssembler() \\\n",
+    "#     .setInputCol(\"body\") \\\n",
+    "#     .setOutputCol(\"document\")\n",
+    "\n",
+    "# sentence_detector = SentenceDetector() \\\n",
+    "#     .setInputCols([\"document\"]) \\\n",
+    "#     .setOutputCol(\"sentence\")\n",
+    "\n",
+    "# tokenizer = Tokenizer() \\\n",
+    "#     .setInputCols([\"sentence\"]) \\\n",
+    "#     .setOutputCol(\"token\")\n",
+    "\n",
+    "# # Use a pretrained embeddings model, for example, BERT\n",
+    "# embeddings = BertEmbeddings.pretrained(\"bert_base_cased\", \"en\") \\\n",
+    "#     .setInputCols([\"sentence\", \"token\"]) \\\n",
+    "#     .setOutputCol(\"embeddings\")\n",
+    "\n",
+    "# ner_model = NerDLModel.pretrained(\"ner_dl_bert\", \"en\") \\\n",
+    "#     .setInputCols([\"sentence\", \"token\", \"embeddings\"]) \\\n",
+    "#     .setOutputCol(\"ner\")\n",
+    "\n",
+    "# ner_converter = NerConverter() \\\n",
+    "#     .setInputCols([\"sentence\", \"token\", \"ner\"]) \\\n",
+    "#     .setOutputCol(\"ner_chunk\")\n",
+    "\n",
+    "# # Build the pipeline\n",
+    "# nlp_pipeline = Pipeline(stages=[\n",
+    "#     document_assembler,\n",
+    "#     sentence_detector,\n",
+    "#     tokenizer,\n",
+    "#     embeddings,\n",
+    "#     ner_model,\n",
+    "#     ner_converter\n",
+    "# ])\n",
+    "\n",
+    "# # Apply the pipeline to your DataFrame\n",
+    "# model = nlp_pipeline.fit(comments_filtered_movies)\n",
+    "# result = model.transform(comments_filtered_movies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2eca482-e01f-46c0-bef7-cdf0d85c31da",
+   "metadata": {},
+   "source": [
+    "### MOVIE SUGGESTIONS EXTRACTION USING NER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cd0b79e-9454-42ee-aa3f-3d9cba5051ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sparknlp.base import DocumentAssembler, Finisher\n",
+    "from sparknlp.annotator import SentenceDetector, Tokenizer, WordEmbeddingsModel, NerDLModel, NerConverter\n",
+    "from pyspark.ml import Pipeline\n",
+    "\n",
     "# Define the pipeline stages\n",
     "document_assembler = DocumentAssembler() \\\n",
     "    .setInputCol(\"body\") \\\n",
@@ -696,12 +751,13 @@
     "    .setInputCols([\"sentence\"]) \\\n",
     "    .setOutputCol(\"token\")\n",
     "\n",
-    "# Use a pretrained embeddings model, for example, BERT\n",
-    "embeddings = BertEmbeddings.pretrained(\"bert_base_cased\", \"en\") \\\n",
+    "# Use GloVe embeddings\n",
+    "embeddings = WordEmbeddingsModel.pretrained(\"glove_100d\", \"en\") \\\n",
     "    .setInputCols([\"sentence\", \"token\"]) \\\n",
     "    .setOutputCol(\"embeddings\")\n",
     "\n",
-    "ner_model = NerDLModel.pretrained(\"ner_dl_bert\", \"en\") \\\n",
+    "# Use a lighter NER model\n",
+    "ner_model = NerDLModel.pretrained(\"ner_dl\", \"en\") \\\n",
     "    .setInputCols([\"sentence\", \"token\", \"embeddings\"]) \\\n",
     "    .setOutputCol(\"ner\")\n",
     "\n",
@@ -721,12 +777,12 @@
     "\n",
     "# Apply the pipeline to your DataFrame\n",
     "model = nlp_pipeline.fit(comments_filtered_movies)\n",
-    "result = model.transform(comments_filtered_movies)"
+    "result = model.transform(comments_filtered_movies)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "57b1ce5f-3f64-445f-9fdb-3abeca3b39f5",
    "metadata": {
     "tags": []
@@ -749,6 +805,79 @@
     "\n",
     "# # Display the results\n",
     "# movies_df.select(\"body\", \"movie_names\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6330f600-0952-4de7-a000-8920992ac0b7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 10:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+--------------+--------------------+---------+-------+-------------------+-----+----------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+---------------+\n",
+      "|       subreddit|        author|                body|parent_id|     id|        created_utc|score|controversiality|            document|            sentence|               token|          embeddings|                 ner|           ner_chunk|    movie_names|\n",
+      "+----------------+--------------+--------------------+---------+-------+-------------------+-----+----------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+---------------+\n",
+      "|MovieSuggestions|     katnip_fl|       Jacobs Ladder|t3_m3rw47|gqscl5i|2021-03-13 10:19:07|    2|               0|[{document, 0, 12...|[{document, 0, 12...|[{token, 0, 5, Ja...|[{word_embeddings...|[{named_entity, 0...|[{chunk, 0, 12, J...|[Jacobs Ladder]|\n",
+      "|MovieSuggestions|  alienstabler|[Holes (2003)](ht...|t3_l20wrm|gqscozr|2021-03-13 10:21:04|    1|               0|[{document, 0, 52...|[{document, 0, 52...|[{token, 0, 5, [H...|[{word_embeddings...|[{named_entity, 0...|                  []|             []|\n",
+      "|MovieSuggestions|ThalesHedonist|V for Vendetta\\n\\...|t3_m3rw47|gqscpsz|2021-03-13 10:21:29|    3|               0|[{document, 0, 47...|[{document, 0, 47...|[{token, 0, 0, V,...|[{word_embeddings...|[{named_entity, 0...|                  []|             []|\n",
+      "|MovieSuggestions|  jaymewheeler|Synchronic was co...|t3_m3rw47|gqscu76|2021-03-13 10:23:37|    2|               0|[{document, 0, 35...|[{document, 0, 35...|[{token, 0, 9, Sy...|[{word_embeddings...|[{named_entity, 0...|                  []|             []|\n",
+      "|MovieSuggestions|    SwissBliss|Climax!!!!! Sound...|t3_m3rw47|gqscxjk|2021-03-13 10:25:19|    2|               0|[{document, 0, 19...|[{document, 0, 10...|[{token, 0, 5, Cl...|[{word_embeddings...|[{named_entity, 0...|[{chunk, 0, 10, C...|  [Climax!!!!!]|\n",
+      "+----------------+--------------+--------------------+---------+-------+-------------------+-----+----------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+---------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "movies_df.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "865d3957-9459-4cf6-86db-4842375c7594",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/11/23 23:50:27 WARN DAGScheduler: Broadcasting large task binary with size 1043.0 KiB\n",
+      "[Stage 11:======>                                                 (12 + 4) / 99]\r"
+     ]
+    }
+   ],
+   "source": [
+    "movies_df.write.parquet(\"s3a://project-group34/project/suggestions/movies/yyyy=2021/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "294ce9d0-20bb-40a0-9fd8-14df88980c20",
+   "metadata": {},
+   "source": [
+    "### MOVIE SUGGESTIONS EXTRACTION USING REGEX"
    ]
   },
   {
@@ -921,6 +1050,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfd56bd0-e74c-4397-b4a4-75ce215cccd5",
+   "metadata": {},
+   "source": [
+    "### EXPLODING SUGGESTIONS "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "2a68d353-4736-4e39-8ff9-9997e7734f13",
@@ -932,8 +1069,25 @@
     "from pyspark.sql.functions import explode, col, count, split\n",
     "\n",
     "# Flatten the movie_names column\n",
-    "df_flattened = df_final.withColumn(\"movie_name\", explode(col(\"movie_names_final\")))\n",
-    "df_movie_frequency = df_flattened.groupBy(\"movie_name\").count()\n"
+    "df_flattened = df_final.withColumn(\"movie_name\", explode(col(\"movie_names_final\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50857e02-c4ab-437b-806b-ff02467d1b45",
+   "metadata": {},
+   "source": [
+    "### GROUPING SUGGESTIONS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed4d69f8-a5ee-4ea5-9979-0591bd56120e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_movie_frequency = df_flattened.groupBy(\"movie_name\").count()"
    ]
   },
   {
@@ -981,44 +1135,6 @@
    "outputs": [],
    "source": [
     "df_top_500_movies.write.parquet(f\"s3a://{bucket}/projects/comments/extracted_movies\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "40049484-247b-4bef-89e4-1c9b82cb44d3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# df_top_500_movies.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "0b838c22-ef7d-40a0-9257-3d5eb6c91de4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import sagemaker\n",
-    "# import boto3\n",
-    "\n",
-    "# # Define your bucket and script path\n",
-    "# bucket = 'project-group34'\n",
-    "# script_key = 'scripts/install_spacy.sh'\n",
-    "\n",
-    "# # Create a boto3 S3 client\n",
-    "# s3_client = boto3.client('s3')\n",
-    "\n",
-    "# # Path to your local script\n",
-    "# local_script_path = './code/install_spacy.sh'\n",
-    "\n",
-    "# # Upload the script\n",
-    "# s3_client.upload_file(Filename=local_script_path, Bucket=bucket, Key=script_key)"
    ]
   },
   {
@@ -2889,7 +3005,7 @@
     "vcpuNum": 128
    }
   ],
-  "instance_type": "ml.t3.xlarge",
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "Python 3 (Data Science 3.0)",
    "language": "python",
