--- a/code/nlp/sentiment_analysis.ipynb
+++ b/code/nlp/sentiment_analysis.ipynb
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "9b291e09-d5f0-4d9d-b0cb-c1d306c67b48",
    "metadata": {
     "tags": []
@@ -1740,7 +1740,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 4:=============================>                             (2 + 2) / 4]\r"
+      "[Stage 16:===========================================>              (3 + 1) / 4]\r"
      ]
     },
     {
@@ -1750,26 +1750,26 @@
       "+--------------------+----------------------+----------------------+\n",
       "|               title|average_positive_score|average_negative_score|\n",
       "+--------------------+----------------------+----------------------+\n",
-      "|          Santa Jaws|                   1.0|        1.04701685E-33|\n",
       "|Ransom for a Dead...|                   1.0|                   0.0|\n",
-      "|    Red River Valley|                   1.0|         1.34535165E-8|\n",
-      "|    Surviving Family|                   1.0|         1.2566309E-10|\n",
+      "|          Santa Jaws|                   1.0|        1.04701685E-33|\n",
       "|       A Normal Life|                   1.0|                   0.0|\n",
-      "|Il Posto - A Stea...|                   1.0|                   0.0|\n",
-      "|  The Student Prince|                   1.0|         1.0214729E-10|\n",
-      "|       Second Chorus|                   1.0|         4.4590555E-29|\n",
       "|Bo Burnham: Make ...|                   1.0|  2.387383166666666...|\n",
-      "| Lies in Plain Sight|                   1.0|                   0.0|\n",
-      "|     Lost in the Fog|                   1.0|                   0.0|\n",
-      "|        Ace Attorney|                   1.0|        1.09114225E-28|\n",
-      "|     Disco Godfather|                   1.0|          9.614927E-12|\n",
-      "|         Chatri Chor|                   1.0|                   0.0|\n",
-      "|A Girl, Three Guy...|                   1.0|                   0.0|\n",
-      "|            Gumshoe!|                   1.0|         5.0628995E-10|\n",
+      "|    Red River Valley|                   1.0|         1.34535165E-8|\n",
       "|        Hard Choices|                   1.0|                   0.0|\n",
-      "|   Stars in My Crown|                   1.0|    1.319953720794E-26|\n",
-      "|Vegas: Based on a...|                   1.0|                   0.0|\n",
-      "|The Posters Came ...|                   1.0|          7.239808E-31|\n",
+      "|     Disco Godfather|                   1.0|          9.614927E-12|\n",
+      "|Jim Gaffigan: Obs...|                   1.0|          7.713538E-10|\n",
+      "|    Surviving Family|                   1.0|         1.2566309E-10|\n",
+      "|Mardock Scramble:...|                   1.0|                   0.0|\n",
+      "|Cinema, de notre ...|                   1.0|  4.562915222222222E-9|\n",
+      "|The Third Monday ...|                   1.0|         3.1839012E-31|\n",
+      "|  The Student Prince|                   1.0|         1.0214729E-10|\n",
+      "|           A oscuras|                   1.0|  5.371613333333334...|\n",
+      "|         Final Flesh|                   1.0|         1.5711509E-31|\n",
+      "|      The Young Land|                   1.0|                   0.0|\n",
+      "|Il Posto - A Stea...|                   1.0|                   0.0|\n",
+      "|    Millions Like Us|                   1.0|                   0.0|\n",
+      "|Apollo: Missions ...|                   1.0|                   0.0|\n",
+      "|   One Man's Justice|                   1.0|           8.40933E-10|\n",
       "+--------------------+----------------------+----------------------+\n",
       "\n"
      ]
@@ -1851,6 +1851,70 @@
    ],
    "source": [
     "top_20_negative.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "279ed54c-45f6-4ce1-93a8-461c2a19c0ad",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "top_20_positive_pd = top_20_positive.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b5facc62-2c94-4b81-a1b4-0a99da8410f9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "top_20_negative_pd = top_20_negative.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7b3525e2-8b10-4dc0-b165-acfa88ef2fd8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "top_20_positive_pd.to_csv(\"../../data/csv/20_positive_movieReviews.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e319598a-c2ce-472d-b240-920efaccb81e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "top_20_negative_pd.to_csv(\"../../data/csv/20_negative_movieReviews.csv\", index = False)"
    ]
   }
  ],
