New Movies according to IMDB Rating

--- a/code/nlp/project_nlp.ipynb
+++ b/code/nlp/project_nlp.ipynb
@@ -767,7 +767,7 @@
     "\n",
     "# Build the pipeline\n",
     "nlp_pipeline = Pipeline(stages=[\n",
-    "    document_assembler,\n",
+    "    document_assembler,s\n",
     "    sentence_detector,\n",
     "    tokenizer,\n",
     "    embeddings,\n",
@@ -858,18 +858,9 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/11/23 23:50:27 WARN DAGScheduler: Broadcasting large task binary with size 1043.0 KiB\n",
-      "[Stage 11:======>                                                 (12 + 4) / 99]\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "movies_df.write.parquet(\"s3a://project-group34/project/suggestions/movies/yyyy=2021/\")"
+    "movies_df.write.parquet(\"s3a://project-group34/project/suggestions/movies/yyyy=2021/\", mode=\"overwrite\")"
    ]
   },
   {
