changed viz  title

--- a/code/nlp/anime_visualization.ipynb
+++ b/code/nlp/anime_visualization.ipynb
@@ -5651,7 +5651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -6653,7 +6653,7 @@
          }
         },
         "title": {
-         "text": "Top rated anime movies across all genre"
+         "text": "Top rated anime across all genre"
         },
         "xaxis": {
          "anchor": "y",
@@ -6715,7 +6715,7 @@
     ")\n",
     "\n",
     "fig.update_layout(\n",
-    "    title=\"Top rated anime movies across all genre\",\n",
+    "    title=\"Top rated anime across all genre\",\n",
     "    xaxis_title=\"Score\",  # Remove x-axis title\n",
     "    yaxis_title=\"\",  # Remove y-axis title\n",
     "    xaxis_showticklabels=True,  # Hide x-axis tick labels\n",
@@ -7012,7 +7012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -8010,7 +8010,7 @@
          }
         },
         "title": {
-         "text": "Genre of top rated anime movies"
+         "text": "Genre of top rated anime"
         },
         "xaxis": {
          "anchor": "y",
@@ -8051,7 +8051,7 @@
     "                'category':True,})\n",
     "fig.update_traces(marker_size=10)\n",
     "fig.update_layout(\n",
-    "    title=\"Genre of top rated anime movies\",\n",
+    "    title=\"Genre of top rated anime\",\n",
     "    plot_bgcolor='white',\n",
     "    yaxis=dict(\n",
     "        side='left',  # Place y-axis on the left side\n",
